Use latest AspectJ Maven and fix complianceLevel
complianceLevel should be ${maven.compiler.target}, not ${java.version}.
The latter is undefined in the POM and would fall back to the JDK
version running Maven, e.g. Java 20, which is not supported by AspectJ
1.9.19 yet.

--- a/app/pom.xml
+++ b/app/pom.xml
@@ -18,6 +18,7 @@
         <allure.version>2.20.1</allure.version>
         <aspectj.version>1.9.19</aspectj.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.example</groupId>
@@ -41,7 +42,6 @@
             <version>${aspectj.version}</version>
         </dependency>
     </dependencies>
-
 
     <build>
         <plugins>
@@ -91,7 +91,7 @@
             <plugin>
                 <groupId>dev.aspectj</groupId>
                 <artifactId>aspectj-maven-plugin</artifactId>
-                <version>1.13</version>
+                <version>1.13.1</version>
                 <dependencies>
                     <dependency>
                         <groupId>org.aspectj</groupId>
@@ -110,7 +110,7 @@
                     </dependency>
                 </dependencies>
                 <configuration>
-                    <complianceLevel>${java.version}</complianceLevel>
+                    <complianceLevel>${maven.compiler.target}</complianceLevel>
                     <showWeaveInfo>true</showWeaveInfo>
                     <verbose>true</verbose>
                     <Xlint>ignore</Xlint>
