--- a/app/pom.xml
+++ b/app/pom.xml
@@ -148,7 +148,7 @@
                 <executions>
                     <execution>
                         <goals>
-                            <goal>compile</goal>
+                            <!--goal>compile</goal-->
                             <goal>test-compile</goal>
                         </goals>
                     </execution>
